--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Bachleors Degree  
+  uni: IIITDM JAbalpur
+  year: June, 2017 &mdash; January, 2021
   # awards:
   # summary:
